; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_color-fast.c_fung.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_color-fast.c_fung.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float)* @fung to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @fung(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca float, align 4
  store float %0, float* %3, align 4
  %4 = load float, float* %3, align 4
  %5 = fcmp oge float %4, 0x3FCA7B9620000000
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load float, float* %3, align 4
  %8 = load float, float* %3, align 4
  %9 = fmul float %7, %8
  %10 = load float, float* %3, align 4
  %11 = fmul float %9, %10
  store float %11, float* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load float, float* %3, align 4
  %14 = fsub float %13, 0x3FC1A7B960000000
  %15 = fmul float 0x3FC07004E0000000, %14
  store float %15, float* %2, align 4
  br label %16

16:                                               ; preds = %12, %6
  %17 = load float, float* %2, align 4
  ret float %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
